@@ -1,5 +1,9 @@
 sensord (0.6.26) unstable; urgency=low
 
+  [Lihan Guo]
+  * Added: Standby override test case	
+  * Fixes: NB#193175 - Screen blank override is re-evaluated only at screen blank event
+		
   [Pia Niemelä, Antti Virtanen]
   * Logging improved:
     - Log target can be configured with --log-target. Target is bitmask so multiple targets can be used at the same time. By default only syslog is used.
